k8s-security-framework/policies/pod-security/KSP-POD-009/tests/exception-resources-with-policy-violation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-009-exception
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      capabilities:
        add:
        - SYS_ADMIN
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-009-exception-secondary
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      capabilities:
        add:
        - SYS_ADMIN
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-009-exception-tertiary
  namespace: policy-test
spec:
  containers:
  - name: secure
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      capabilities:
        add:
        - NET_BIND_SERVICE
  ephemeralContainers:
  - name: debugger
    image: harbor.example.com/demo-api:1.0.0
    command:
    - sh
    securityContext:
      capabilities:
        add:
        - SYS_ADMIN
