k8s-security-framework/policies/pod-security/KSP-POD-009/tests/exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: restrict-added-capabilities-exception
  namespace: policy-test
spec:
  policyRefs:
  - name: restrict-added-capabilities
    kind: ValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name == 'ksp-pod-009-exception' && object.metadata.namespace
      == 'policy-test'
