k8s-security-framework/policies/pod-security/KSP-POD-009/tests/negative-add-sys-admin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-009-negative-one-container
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        capabilities:
          add: [SYS_ADMIN]
