k8s-security-framework/policies/pod-security/KSP-POD-009/tests/positive-add-net-bind-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-009-positive-one-container
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        capabilities:
          add: [NET_BIND_SERVICE]
